frontend/test/should_fail/cast_005.grg
using attrib_model_001, enum_model_001;

rule r {
	pattern {
		x: NSTRING;
		k: A;
	}
	modify {
		eval {
			k.e = (te) x.a;
		}
	}
}
